Added Imports to Notebook

--- a/encodings_101.ipynb
+++ b/encodings_101.ipynb
@@ -17,14 +17,92 @@
    "source": [
     "We will go through the following _Encoding Strategies_:\n",
     "\n",
-    "1. Label Encoding\n",
-    "2. One-Hot Encoding\n",
-    "3. Frequency Encoding\n",
-    "4. Binary Encoding\n",
-    "5. Feature Hashing\n",
-    "6. Target Encoding\n",
-    "7. M-Estimate Encoding"
+    "__Unsupervised -__ _Don’t make use of the target variable to encode categorical variables_\n",
+    "1. Label Encoder\n",
+    "2. One-Hot Encoder\n",
+    "3. Frequency Encoder\n",
+    "4. Binary Encoder\n",
+    "5. Hashing Encoder\n",
+    "\n",
+    "__Supervised -__ _Employ the target variable to encode categorical variables._\n",
+    "1. Target Encoder\n",
+    "2. James-Stein Encoder\n",
+    "3. M-Estimate Encoder\n",
+    "4. Weight of Evidence Encoder\n",
+    "5. Catboost Encoder"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Libraries Used:__\n",
+    "\n",
+    "1. [Category Encoders](https://contrib.scikit-learn.org/category_encoders/)\n",
+    "2. [Numpy](https://numpy.org/)\n",
+    "2. [Pandas](https://pandas.pydata.org/)\n",
+    "3. [Plotly](https://plotly.com/python/)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Let's get started!__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let's install the libraries and import it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q category_encoders numpy pandas plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import category_encoders\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load and Explore the Dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -34,8 +112,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
