--- a/encodings_101.ipynb
+++ b/encodings_101.ipynb
@@ -102,7 +102,16 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<!--\n",
+    "Author: Alister Luiz (alisterluiz@gmail.com)\n",
+    "encodings_101.ipynb (c) 2023\n",
+    "Desc: description\n",
+    "Created:  2023-01-15T10:04:09.539Z\n",
+    "Modified: !date!\n",
+    "-->\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
